# ChangeLog for net-nntp/pan
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nntp/pan/ChangeLog,v 1.36 2007/02/15 19:47:02 swegener Exp $

*pan-0.124 (15 Feb 2007)

  15 Feb 2007; Sven Wegener <swegener@gentoo.org> +pan-0.124.ebuild:
  Version bump.

*pan-0.123 (08 Feb 2007)

  08 Feb 2007; Sven Wegener <swegener@gentoo.org> +pan-0.123.ebuild:
  Version bump.

*pan-0.122 (04 Feb 2007)

  04 Feb 2007; Sven Wegener <swegener@gentoo.org> +pan-0.122.ebuild:
  Version bump.

*pan-0.121 (23 Jan 2007)

  23 Jan 2007; Sven Wegener <swegener@gentoo.org> +pan-0.121.ebuild:
  Version bump.

  10 Jan 2007; Mart Raudsepp <leio@gentoo.org> -pan-0.116.ebuild,
  -pan-0.117.ebuild, -pan-0.118.ebuild, -pan-0.119.ebuild:
  Prune old beta versions

*pan-0.120 (04 Jan 2007)

  04 Jan 2007; Sven Wegener <swegener@gentoo.org> +pan-0.120.ebuild:
  Version bump.

*pan-0.119 (13 Nov 2006)

  13 Nov 2006; Sven Wegener <swegener@gentoo.org> +pan-0.119.ebuild:
  Version bump.

  04 Nov 2006; Sven Wegener <swegener@gentoo.org> pan-0.14.2.ebuild,
  pan-0.14.2-r1.ebuild, pan-0.14.2.91-r2.ebuild, pan-0.14.2.91-r3.ebuild,
  pan-0.116.ebuild, pan-0.117.ebuild, pan-0.118.ebuild:
  Add missing pkgconfig dep, bug #153273.

*pan-0.118 (03 Nov 2006)

  03 Nov 2006; Sven Wegener <swegener@gentoo.org> +pan-0.118.ebuild:
  Version bump.

*pan-0.117 (22 Oct 2006)

  22 Oct 2006; Sven Wegener <swegener@gentoo.org> +pan-0.117.ebuild:
  Version bump.

*pan-0.116 (10 Oct 2006)

  10 Oct 2006; Sven Wegener <swegener@gentoo.org> -files/0.115-size_t.patch,
  -pan-0.115.ebuild, +pan-0.116.ebuild:
  Version bump.

  09 Oct 2006; Sven Wegener <swegener@gentoo.org> +files/0.115-size_t.patch,
  pan-0.115.ebuild:
  Add patch to fix bug #149865.

  06 Oct 2006; Sven Wegener <swegener@gentoo.org> -pan-0.107.ebuild,
  -pan-0.109.ebuild, -pan-0.111.ebuild, -pan-0.112.ebuild,
  -pan-0.113.ebuild, -pan-0.114.ebuild:
  Cleanup.

*pan-0.115 (01 Oct 2006)
