@@ -9,29 +9,9 @@ AUX pan-0.14.2.91-gcc4-2.patch 698 RMD160 cca70799a8507af85b2c60857bade4618f7fa7
 MD5 8ba6afcc31900a8353dc12ef62681f38 files/pan-0.14.2.91-gcc4-2.patch 698
 RMD160 cca70799a8507af85b2c60857bade4618f7fa75d files/pan-0.14.2.91-gcc4-2.patch 698
 SHA256 fd2ecb4b72c8046d30ef9dec43c088d5d346690c332a7b7dd9b66076b3ff7538 files/pan-0.14.2.91-gcc4-2.patch 698
-DIST pan-0.120.tar.bz2 1415452 RMD160 990c0da91dbc061461a79e3357102ac48bbe9559 SHA1 1372a89009ba58887dd244e5820613a6e6667fe4 SHA256 2ed02a15a5c036d41055abe2765c5136d09ea8da631327e0de660682caaec276
-DIST pan-0.121.tar.bz2 1417298 RMD160 4429dc6fb31d941e9312bde60b7735e4f6f136f0 SHA1 9b22353995dac00daf5609d4a1754ea7008b7dac SHA256 b48a831ebee946f72bba11a0cb0e08c0045854d949f237074ea3579ae8c75c6d
-DIST pan-0.122.tar.bz2 1430444 RMD160 79493d0cf210cacfe82b74098433c3932ebeedfc SHA1 996fd306ee41c337202627a778bbc5dcee46ee22 SHA256 fa4501d56bb7c9e24158f1f673f7fc204ff90ed396ada07e3613c618602be72b
-DIST pan-0.123.tar.bz2 1427393 RMD160 343ec6cdd844f0d865718f18e8901b464306c72d SHA1 25aa4d5ad9ad4da1b2d9a991a41b9e316f6d436e SHA256 1797658c44a1525deab936ef5678eb0ce4ce9bfdca0b2cb794aaf0890bfae7ab
 DIST pan-0.124.tar.bz2 1428046 RMD160 b346b725934acb042ba6d24ec9a02d856a1c1b4d SHA1 2785d1ec5d7c714f5fe10d1b9aaa1d143b669c3c SHA256 777af9aec026838b77ac93260c18ec815e10757cd8aca1226085793b407eb483
 DIST pan-0.14.2.91.tar.bz2 1919099 RMD160 372012f9f23ef1654125977ff4dee193021fb733 SHA1 1a321bd7425350a1991e6802b05bcea8b744f923 SHA256 1658c22fbe29ac0b88d2ae8e487247bad40618809719819297ecf0b7ae69a9ab
 DIST pan-0.14.2.tar.bz2 1834784 RMD160 0dff24b1d83b6fabfb9cc38a7dea5f9e99513009 SHA1 39c0128906d389524e24d55691e017cf509516a0 SHA256 d864907d3179cde5bdd7afa02c8a2bd00f1d23ce6053f704f64e7814c7f6aba4
-EBUILD pan-0.120.ebuild 956 RMD160 0f2d4e1a7709a2ac856b55a6425b343f4709f3f9 SHA1 732997c5a6c38aca8e3e005d5cb553c5f8b4b812 SHA256 4d4a5a7d0a8fd377d739e92bd02a9a4c326b248a5e00c11db96a08af92b8588e
-MD5 29f7a04e138dfb1f35917143e3f995c7 pan-0.120.ebuild 956
-RMD160 0f2d4e1a7709a2ac856b55a6425b343f4709f3f9 pan-0.120.ebuild 956
-SHA256 4d4a5a7d0a8fd377d739e92bd02a9a4c326b248a5e00c11db96a08af92b8588e pan-0.120.ebuild 956
-EBUILD pan-0.121.ebuild 956 RMD160 d9cba685b018cec3fb6ac61144da8d94bd3241ab SHA1 553e5b4307e890574345673d814cf51b7ba9afc2 SHA256 dac8e642f5b0fcfce56b6e56e33c958933d5dd6808322ada23aea159feb03f57
-MD5 143342d112819cc9fe02c41d2a30bff7 pan-0.121.ebuild 956
-RMD160 d9cba685b018cec3fb6ac61144da8d94bd3241ab pan-0.121.ebuild 956
-SHA256 dac8e642f5b0fcfce56b6e56e33c958933d5dd6808322ada23aea159feb03f57 pan-0.121.ebuild 956
-EBUILD pan-0.122.ebuild 956 RMD160 133c0b5bdcbafbbd0d7efb90b7897cc5c6f0cf64 SHA1 77367c08a71dc5d13406582d61b4551119ee1cfa SHA256 2323931b218e60c6161de838144b8df3777540f22cd17a3fc3e49c9c8d29e094
-MD5 f0b4c74bdc04ce6d25a5da5119f1d534 pan-0.122.ebuild 956
-RMD160 133c0b5bdcbafbbd0d7efb90b7897cc5c6f0cf64 pan-0.122.ebuild 956
-SHA256 2323931b218e60c6161de838144b8df3777540f22cd17a3fc3e49c9c8d29e094 pan-0.122.ebuild 956
-EBUILD pan-0.123.ebuild 956 RMD160 b2e7e398a6fc672d1b7782c39a2acd1f780e690a SHA1 4b15132ebb1f39ac5d4689ccf13b0c9e2bd776f4 SHA256 093ce8248a4ec016fdb93d4804b1c541db74e6da8c009a2ecdd83a3eca297b4b
-MD5 b3f72833ac75c3c50604582adee7af24 pan-0.123.ebuild 956
-RMD160 b2e7e398a6fc672d1b7782c39a2acd1f780e690a pan-0.123.ebuild 956
-SHA256 093ce8248a4ec016fdb93d4804b1c541db74e6da8c009a2ecdd83a3eca297b4b pan-0.123.ebuild 956
 EBUILD pan-0.124.ebuild 956 RMD160 112b479eb489e01eb774b819ea616a34bf6a3ad4 SHA1 d50907824f3baf06e8c71a9aeac0451b6bc8319c SHA256 e26c83d22438e4950863469d686188135f7d59d746b58ba6d61caa8133a5c014
 MD5 d7b95bbd9c5ec750c643080a12e83fda pan-0.124.ebuild 956
 RMD160 112b479eb489e01eb774b819ea616a34bf6a3ad4 pan-0.124.ebuild 956
@@ -52,26 +32,14 @@ EBUILD pan-0.14.2.ebuild 1428 RMD160 41f6e981fda0f4b5759a35965811674b6cf1b4b9 SH
 MD5 826516c2e873bbfd2e9759b74bac8734 pan-0.14.2.ebuild 1428
 RMD160 41f6e981fda0f4b5759a35965811674b6cf1b4b9 pan-0.14.2.ebuild 1428
 SHA256 7372d3323f32d5668acde7e57964f355fa1bcdb2a6a9c42693531fd7d66d8a24 pan-0.14.2.ebuild 1428
-MISC ChangeLog 11406 RMD160 452312fd5fec42c7e7314f79135170852a2b7de2 SHA1 7af82ebcc4f12f82995163070f5634a6f3633751 SHA256 0b3e6eec143d4ca0b037be37141b19ebd5efd511a22016b66bff2ec6cad90fc2
-MD5 5e8d6ec22f436f9b69167fbaa0884690 ChangeLog 11406
-RMD160 452312fd5fec42c7e7314f79135170852a2b7de2 ChangeLog 11406
-SHA256 0b3e6eec143d4ca0b037be37141b19ebd5efd511a22016b66bff2ec6cad90fc2 ChangeLog 11406
+MISC ChangeLog 11546 RMD160 f9be37a2c1a3c978dce6812f9be68f744d090b93 SHA1 287092445d560391480433957d9568bb693b49dd SHA256 2a7243e261468008c61e5be6866986ac72d6a64a2b5185ebaf0c3f1fd793edc7
+MD5 7e365c0b64f891292ff0bdc51e70b4c0 ChangeLog 11546
+RMD160 f9be37a2c1a3c978dce6812f9be68f744d090b93 ChangeLog 11546
+SHA256 2a7243e261468008c61e5be6866986ac72d6a64a2b5185ebaf0c3f1fd793edc7 ChangeLog 11546
 MISC metadata.xml 180 RMD160 797b69d3fd6f36d441bda500c1310c91837720a4 SHA1 e2e177f18436d4250aadeadfd6ec27639861290e SHA256 1bb112215f4f710d26b79a43b61ec93003963663cfdec7b3b7173cfdbf85f52c
 MD5 b379ecb012e58dcb29c4feee0f5219f2 metadata.xml 180
 RMD160 797b69d3fd6f36d441bda500c1310c91837720a4 metadata.xml 180
 SHA256 1bb112215f4f710d26b79a43b61ec93003963663cfdec7b3b7173cfdbf85f52c metadata.xml 180
-MD5 e83eb8ed6ce8fb810fe9519c5de2e7c7 files/digest-pan-0.120 235
-RMD160 e171df7bfe6366cda7906753177907c89360fdac files/digest-pan-0.120 235
-SHA256 5d7f0fe8231de8b0d8e030d7f70d65999a5102c61486d2820a1e4d1576571c93 files/digest-pan-0.120 235
-MD5 0ef98ac239f6ac2622095b2209844b49 files/digest-pan-0.121 235
-RMD160 7a231bb7040f50c2112a1bf46886b98069de0fa9 files/digest-pan-0.121 235
-SHA256 6d7776f7c52e0bc99d796c03519ed0738f8b501ed1399040bff1e417f7207019 files/digest-pan-0.121 235
-MD5 5f0b71c59d5bb36c07062416ac6b46e2 files/digest-pan-0.122 235
-RMD160 d39d8acb1a33b8b46cde4b8c2f67fc0b999c19fa files/digest-pan-0.122 235
-SHA256 6651963cc9be3f6cc7208943524c9e5ed1874f611d88ec64d73d3d97a1064691 files/digest-pan-0.122 235
-MD5 6ae4a3029e06e90a102962d4290f035c files/digest-pan-0.123 235
-RMD160 4aece529f3d0e5ceea0c9aba3a07bdde4737ffbc files/digest-pan-0.123 235
-SHA256 a31490e3c855e10c40b5636fa38bdb4f620b9cf582335b8255f8228c96ad9e11 files/digest-pan-0.123 235
 MD5 b483648f1d134d816b3044a39b04de61 files/digest-pan-0.124 235
 RMD160 2429540f1a7514420f024d2fbb54836af83538e8 files/digest-pan-0.124 235
 SHA256 76e06b3828e9f6f2629c9d885c72542177fbb0b54605ed7e239697590904b5ea files/digest-pan-0.124 235
@@ -90,7 +58,7 @@ SHA256 fe8c623cf540b747754d6a036dcc2676907148e285b791833c73a891c3a52677 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.2 (GNU/Linux)
 
-iD8DBQFF1Li/I1lqEGTUzyQRAjr2AKDaD0FK+LFKdUL44kk4baUe13fgFACeLDXF
-mvVpFVomcm7JPhwLSndokyg=
-=1hoL
+iD8DBQFF2LwKI1lqEGTUzyQRAllqAKDPw41/LNBzHBAM9hSCPElYhU8TjwCgnuRF
+cbDvaZGQqjVTHUlUNDjRF4Y=
+=JM9P
 -----END PGP SIGNATURE-----
