@@ -1,3 +1,0 @@
-MD5 5e7425a581c4bec7a47cb8d22cfd6fe8 pan-0.120.tar.bz2 1415452
-RMD160 990c0da91dbc061461a79e3357102ac48bbe9559 pan-0.120.tar.bz2 1415452
-SHA256 2ed02a15a5c036d41055abe2765c5136d09ea8da631327e0de660682caaec276 pan-0.120.tar.bz2 1415452
