@@ -1,3 +1,0 @@
-MD5 a63085be589a387c7a4d94e71dd52e36 pan-0.121.tar.bz2 1417298
-RMD160 4429dc6fb31d941e9312bde60b7735e4f6f136f0 pan-0.121.tar.bz2 1417298
-SHA256 b48a831ebee946f72bba11a0cb0e08c0045854d949f237074ea3579ae8c75c6d pan-0.121.tar.bz2 1417298
