@@ -1,3 +1,0 @@
-MD5 ae8a20d11555262fe640cdf51d05eb81 pan-0.122.tar.bz2 1430444
-RMD160 79493d0cf210cacfe82b74098433c3932ebeedfc pan-0.122.tar.bz2 1430444
-SHA256 fa4501d56bb7c9e24158f1f673f7fc204ff90ed396ada07e3613c618602be72b pan-0.122.tar.bz2 1430444
