@@ -1,3 +1,0 @@
-MD5 1414ffdddbdfa6c71e528a9268239044 pan-0.123.tar.bz2 1427393
-RMD160 343ec6cdd844f0d865718f18e8901b464306c72d pan-0.123.tar.bz2 1427393
-SHA256 1797658c44a1525deab936ef5678eb0ce4ce9bfdca0b2cb794aaf0890bfae7ab pan-0.123.tar.bz2 1427393
