@@ -1,6 +1,10 @@
 # ChangeLog for net-nntp/pan
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/pan/ChangeLog,v 1.36 2007/02/15 19:47:02 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/pan/ChangeLog,v 1.37 2007/02/18 20:50:10 swegener Exp $
+
+  18 Feb 2007; Sven Wegener <swegener@gentoo.org> -pan-0.120.ebuild,
+  -pan-0.121.ebuild, -pan-0.122.ebuild, -pan-0.123.ebuild:
+  Cleanup.
 
 *pan-0.124 (15 Feb 2007)
 
